--- a/index.html
+++ b/index.html
@@ -7,17 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fetch experiment</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
 </head>
 
 <body>
     <div class="container">
-        <input type="text" id="day" placeholder="Enter the Day">
-        <button>Search</button>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Day
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Monday</a></li>
+                <li><a class="dropdown-item" href="#">Tuesday</a></li>
+                <li><a class="dropdown-item" href="#">Wednesday</a></li>
+                <li><a class="dropdown-item" href="#">Thursday</a></li>
+                <li><a class="dropdown-item" href="#">Friday</a></li>
+            </ul>
+        </div>
         <div class="container_time_slot">
 
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="fetch.js"></script>
 </body>
 
