finally ready with animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <style>
 
+    </style>
 </head>
 
 <body>
@@ -28,7 +31,14 @@
             </ul>
         </div>
         <div class="container_time_slot">
-
+            <div class="card  animate__bounce">
+                <div class="card-body">
+                    <h3 class="card-title">Time Table of MNC</h3>
+                    <p class="card-text">Select the Day to get the Time
+                        Table of that Day
+                    </p>
+                </div>
+            </div>
         </div>
 
     </div>
