--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
         <div class="container_time_slot">
             <div class="card  animate__bounce">
                 <div class="card-body">
-                    <h3 class="card-title">Time Table of MNC</h3>
-                    <p class="card-text">Select the Day to get the Time
-                        Table of that Day
-                    </p>
+                    <h3 class="card-title">Semester V</h3>
+                    <p>🤞🤞🤞🤞🤞</p>
                 </div>
             </div>
         </div>
