--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="card  animate__bounce">
                 <div class="card-body">
                     <h3 class="card-title">Semester V</h3>
-                    <p>🤞🤞🤞🤞🤞</p>
+                    <p class="card-title">🤞🤞🤞🤞🤞</p>
                 </div>
             </div>
         </div>
