updated for sem6

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <div class="container_time_slot">
             <div class="card  animate__bounce">
                 <div class="card-body">
-                    <h3 class="card-title">Semester V</h3>
-                    <p class="card-title">🤞🤞🤞🤞🤞</p>
+                    <h3 class="card-title">January Semester Kickoff! 🗓️✨</h3>
                 </div>
             </div>
         </div>
